--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -9,3 +9,8 @@ $fontMain: #{$fontSizeM} / #{$fontLineM} $fontFamilyMain;
 $fontSizeL: 24px;
 $fontLineL: 150%;
 $fontLarge: #{$fontSizeL} / #{$fontLineL} $fontFamilyMain;
+
+//Цвета
+$baseWhite: #fff;
+$baseBlack: #000;
+$active: #ff0d0d;
