--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -13,4 +13,6 @@ $fontLarge: #{$fontSizeL} / #{$fontLineL} $fontFamilyMain;
 //Цвета
 $baseWhite: #fff;
 $baseBlack: #000;
+$figureWhite: #f8d29b;
+$figureBlack: #5b3939;
 $active: #ff0d0d;
