--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,8 @@
 :root {
   --cell-white: #{$baseWhite};
   --cell-black: #{$baseBlack};
+  --figure-white: #{$figureWhite};
+  --figure-black: #{$figureBlack};
   --active: #{$active}
 }
 
