--- a/src/widgets/Board/ui/Board.module.scss
+++ b/src/widgets/Board/ui/Board.module.scss
@@ -1,6 +1,7 @@
 :global {
   main {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
   }
@@ -19,28 +20,10 @@
   border: 5px solid var(--primary-color);
 }
 
-.Columns {
-  display: grid;
-  grid-template-rows: repeat(8, 1fr);
-  height: 500px;
-  width: 70px;
-  border-right: none;
-  justify-items: center;
-  align-items: center;
-  transform: rotate(180deg);
+.TextMove {
+  font: var(--font-l);
 
-  & > * {
-    transform: rotate(-180deg);
+  span {
+    font-weight: 600;
   }
-}
-
-.Rows {
-  display: grid;
-  grid-area: 2 / 2 / 3 / 3;
-  grid-template-columns: repeat(8, 1fr);
-  height: 70px;
-  width: 500px;
-  border-right: none;
-  justify-items: center;
-  align-items: center;
 }
