feat: Checkers logic refactor

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -9,6 +9,7 @@
   --figure-black: #{$figureBlack};
   --active: #{$active};
   --turbid: #{$turbid};
+  --primary: #{$primary};
   --font-s: #{$fontMain};
   --font-m: #{$fontMain};
   --font-l: #{$fontLarge};
