--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -16,4 +16,5 @@ $baseBlack: #000;
 $figureWhite: #f8d29b;
 $figureBlack: #5b3939;
 $active: #ff0d0d;
-$turbid: rgba(0, 0, 0, 0.5)
+$turbid: rgba(0, 0, 0, 0.5);
+$primary: #3a61f3;
