--- a/src/widgets/Board/ui/Board.module.scss
+++ b/src/widgets/Board/ui/Board.module.scss
@@ -18,6 +18,16 @@
   width: 500px;
   height: 500px;
   border: 5px solid var(--primary-color);
+
+  &.withoutPrompts {
+    :global(.active) {
+      cursor: default;
+
+      &:before {
+        opacity: 0;
+      }
+    }
+  }
 }
 
 .TextMove {
