ref: Add require kill

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -8,6 +8,7 @@
   --figure-white: #{$figureWhite};
   --figure-black: #{$figureBlack};
   --active: #{$active};
+  --require: #{$require};
   --turbid: #{$turbid};
   --primary: #{$primary};
   --font-s: #{$fontMain};
