--- a/src/entities/Cell/ui/Figure/Figure.module.scss
+++ b/src/entities/Cell/ui/Figure/Figure.module.scss
@@ -28,7 +28,13 @@
     }
   }
 
-  &:global(.active) {
+  &.require {
+    border: 3px solid var(--require);
+    width: 75%;
+    height: 75%;
+  }
+
+  &.active {
     border: 3px solid var(--active);
     width: 85%;
     height: 85%;
