--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,11 +1,13 @@
 $bgColor: #fff;
 $primaryColor: #000;
 $secondaryColor: #b1b1b1;
+$dividerColor: rgba(255, 255, 255, 0.5);
 
 .app {
   &.light {
     --bg-color: #{$bgColor};
     --primary-color: #{$primaryColor};
     --navbar-bg-color: #{$secondaryColor};
+    --disabled-color: #{$dividerColor};
   }
 }
