--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -7,6 +7,11 @@
   outline: none;
   background-color: var(--bg-color);
   color: var(--primary-color);
+
+  &:disabled {
+    cursor: default;
+    background-color: var(--disabled-color);
+  }
 }
 
 .clear {
