ref: Add figure animation

--- a/src/entities/Cell/ui/Figure/Figure.module.scss
+++ b/src/entities/Cell/ui/Figure/Figure.module.scss
@@ -40,6 +40,11 @@
     height: 85%;
   }
 
+  &.moving {
+    position: absolute;
+    z-index: 1;
+  }
+
   & > svg {
     width: 80%;
     height: 80%;
