ref: Welcome screen

--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -32,6 +32,7 @@
 
 .Content {
   display: flex;
+  align-items: center;
   flex-direction: column;
   text-align: center;
   background-color: var(--cell-white);
