--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -26,8 +26,13 @@
   grid-template-rows: auto 1fr;
 }
 
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+}
+
+body {
   font: $fontMain;
 }
 
