--- a/src/features/checkers/ui/CheckersSettingsModal/CheckersSettingsModal.module.scss
+++ b/src/features/checkers/ui/CheckersSettingsModal/CheckersSettingsModal.module.scss
@@ -1,17 +1,4 @@
-.switchWrapper {
-  text-align: left;
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  margin-top: 16px;
-  align-items: center;
-
-  label {
-    width: 200px;
-  }
-}
-
 .startGameBtn {
   width: fit-content;
-  margin: auto auto 0;
+  margin: 15px auto 0;
 }
