ref: Welcome page refactor

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -11,6 +11,7 @@
   --require: #{$require};
   --turbid: #{$turbid};
   --primary: #{$primary};
+  --blue-secondary: #{$blueSecondary};
   --font-s: #{$fontMain};
   --font-m: #{$fontMain};
   --font-l: #{$fontLarge};
