--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -2,6 +2,7 @@ $bgColor: #000;
 $primaryColor: #fff;
 $secondaryColor: #3f3f3f;
 $dividerColor: rgba(0, 0, 0, 0.5);
+$btnPrimaryColor: #00008b;
 
 body {
   &.dark {
@@ -9,5 +10,6 @@ body {
     --primary-color: #{$primaryColor};
     --navbar-bg-color: #{$secondaryColor};
     --disabled-color: #{$dividerColor};
+    --btn-primary-color: #{$btnPrimaryColor};
   }
 }
