--- a/src/features/welcome/ui/Welcome.module.scss
+++ b/src/features/welcome/ui/Welcome.module.scss
@@ -1,33 +1,30 @@
 .welcome {
+  display: flex;
+  flex-direction: column;
   height: 100vh;
-  padding: 30px 0 90px;
+  padding-top: 30px;
 
   & > h1 {
     text-align: center;
     font-size: 58px;
+  }
+
+  & > h2 {
+    text-align: center;
+    font-size: 28px;
+    margin-top: 10px;
   }
 }
 
 .wrapper {
   display: flex;
   column-gap: 30px;
-  max-width: 1440px;
-  margin: 50px auto 0;
-}
+  height: 500px;
+  margin-top: auto;
+  justify-content: center;
 
-aside {
-  & > img {
-    border-radius: 24px;
-    width: 100%;
-    height: 500px;
-    object-fit: cover;
-    object-position: 0 75%;
-  }
-
-  & > p {
-    font-size: 35px;
-    line-height: 120%;
-    margin-top: 10px;
+  img {
+    width: 570px;
   }
 }
 
@@ -37,7 +34,7 @@ aside {
   align-items: center;
   height: fit-content;
   padding: 20px;
-  background: rgb(219, 112, 147, 0.5);
+  background: var(--blue-secondary);
   border-radius: 24px;
 
   & > button {
