--- a/src/features/checkers/ui/CheckersSettingsModal/CheckersSettingsModal.module.scss
+++ b/src/features/checkers/ui/CheckersSettingsModal/CheckersSettingsModal.module.scss
@@ -1,4 +1,6 @@
-.startGameBtn {
-  width: fit-content;
-  margin: 15px auto 0;
+.settingsModal {
+  .startGameBtn {
+    width: fit-content;
+    margin: 15px auto 0;
+  }
 }
